give admin right to update role

--- a/app/views/dashboards/edit_user_profile.html.erb
+++ b/app/views/dashboards/edit_user_profile.html.erb
@@ -27,6 +27,10 @@
                   autofocus: true,
                   input_html: { autocomplete: "email" } %>
 
+      <% if current_user.admin? %>
+        <%= f.input :role, as: :select, label: "Ik ben een", collection: [['Student', 'student'], ['Leraar', 'teacher']], selected: resource.role %>
+      <% end %>
+
 
       <div class="form-actions">
         <%= f.button :submit, "BIJWERKEN", class: "btn btn-azure btn-form" %>
