--- a/app/views/dashboards/my_groups.html.erb
+++ b/app/views/dashboards/my_groups.html.erb
@@ -17,7 +17,7 @@
             <h2 class="mb-0"><%= group.name %></h2>
 
             <!-- Action Buttons (Edit/Delete) -->
-            <div class="d-flex">
+            <div class="d-flex align-items-center">
               <!-- Edit Button -->
               <%= link_to edit_group_path(group), class: 'me-4', title: 'Groep wijzigen' do %>
                 <i class="fa-solid fa-pen-to-square icon-aligned"></i>
