--- a/app/views/courses/my_courses.html.erb
+++ b/app/views/courses/my_courses.html.erb
@@ -25,7 +25,7 @@
             <h2 class="mb-0"><%= course.title %></h2>
 
             <!-- Action Buttons (Edit/Delete) -->
-            <div class="d-flex">
+            <div class="d-flex align-items-center">
               <!-- Edit Button -->
               <%= link_to edit_course_path(course), class: 'me-4', title: 'Wijzig cursus' do %>
                 <i class="fa-solid fa-pen-to-square icon-aligned"></i>
