--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -7,7 +7,7 @@
   <div class="main-content flex-grow-1">
 
     <!-- Flexbox for avatar and profile information -->
-    <div class="d-flex align-items-center">
+    <div class="d-flex align-items-center mb-4">
       <!-- Avatar image -->
       <div class="me-4">
         <%= image_tag 'avatar-blue.png', alt: 'Avatar', class: 'avatar-large' %>
@@ -32,20 +32,26 @@
 
             <!-- Action Buttons -->
             <% if current_user.teacher? || current_user.admin? %>
-              <div class="d-flex">
+              <div class="d-flex align-items-center">
                 <!-- Create New Weekly Task Button -->
-                <%= link_to weekly_task_courses_path, class: 'me-4', title: 'Create a new weekly task' do %>
-                  <i class="fa-solid fa-plus icon-aligned"></i>
+                <%= link_to weekly_task_courses_path, class: 'me-2', title: 'Create a new weekly task' do %>
+                  <div class="icon-wrapper">
+                    <i class="fa-solid fa-plus icon-aligned"></i>
+                  </div>
                 <% end %>
 
                 <!-- Edit Button -->
-                <%= link_to edit_weekly_task_course_path(weekly_task), class: 'me-4', title: 'Edit this task' do %>
-                  <i class="fa-solid fa-pen-to-square icon-aligned"></i>
+                <%= link_to edit_weekly_task_course_path(weekly_task), class: 'me-2', title: 'Edit this task' do %>
+                  <div class="icon-wrapper">
+                    <i class="fa-solid fa-pen-to-square icon-aligned"></i>
+                  </div>
                 <% end %>
 
                 <!-- Delete Button -->
                 <%= link_to course_path(weekly_task), method: :delete, data: { confirm: "Weet je zeker dat je deze weektaak wilt verwijderen? Dit kan niet ongedaan gemaakt worden.", turbo: false }, class: 'me-2', title: 'Weektaak verwijderen' do %>
-                  <i class="fa-solid fa-xmark icon-aligned"></i>
+                  <div class="icon-wrapper">
+                    <i class="fa-solid fa-xmark icon-aligned"></i>
+                  </div>
                 <% end %>
               </div>
             <% end %>
