--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
 <div class="home">
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= asset_path('banner-annie-spratt.jpg') %>);">
     <div class="container">
-      <h1>BANNER KOPTEKST</h1>
-      <h2>Subkoptekst hier</h2>
+      <h1 class="mb-0">Kansen Academie Oefenen</h1>
+      <h2 class="mb-2">Ontdek jouw talenten en groei verder!</h2>
+      <p>
+        Met de Kansen Academie website leren jongeren op een leuke en effectieve manier belangrijke vaardigheden voor school en persoonlijke ontwikkeling.
+      </p>
       <%= link_to "REGISTREREN", new_user_registration_path, class: "btn btn-azure" %>
     </div>
   </div>
@@ -10,8 +13,38 @@
   <div class="container home-container">
     <%= image_tag "ska-logo.png", class: "left-logo", alt: "Stichting Kansen Academie logo" %>
     <div class="home-text">
-      <h3>SUBSECTIE</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h3>Ons aanbod</h3>
+      <h4>Abonnementen</h4>
+      <p>Je kunt een abonnement particulier aanschaffen of namens een school.</p>
+              
+      <p>
+        <ul>
+          <li>        
+            Basis: €3,99 per maand
+            Toegang tot alle basismodules en voortgangsrapportages.
+          </li>
+          <li>        
+            Plus:€7,99 per maand
+            Alles van Basis, plus persoonlijke feedback en tips van mentoren.
+          </li>
+          <li>
+            Docenten account: €12,99 per maand
+            Speciaal voor scholen en docenten. Inclusief toegang voor meerdere leerlingen en inzicht in hun voortgang.
+          </li>
+        </ul>
+      </p>
+
+      <h4>Hoe werkt het?</h4>
+      <p>
+        <ol>
+          <li>Meld je aan: Maak een gratis account aan en probeer onze website.</li>
+          <li>Kies jouw abonnement: Upgrade eenvoudig om toegang te krijgen tot extra mogelijkheden.</li>
+          <li>Ontwikkel je talenten: Oefen, leer en groei op jouw eigen tempo!</li>
+        </ol>
+      </p>
+      <p>
+        Start vandaag nog! Samen maken we leren leuk en effectief.
+      </p>
     </div>
   </div>
 </div>
