--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 .home {
-  background-color: #EDF8FC;
+  background-color: #edf8fc;
   min-height: calc(100vh - 143px);
 }
 
@@ -10,20 +10,27 @@
 }
 
 .banner h1 {
-  color: #70C9E8;
+  color: #70c9e8;
   font-family: "Montserrat", sans-serif;
   font-size: 48px;
   font-weight: bold;
   margin: 0;
   margin-bottom: 20px;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 .banner h2 {
-  color: #D9D9D9;
+  color: #d9d9d9;
   font-size: 28px;
   margin-bottom: 32px;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.banner p {
+  color: #d9d9d9;
+  font-size: 20px;
+  margin-bottom: 32px;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 .home-container {
@@ -42,8 +49,14 @@
 }
 
 .home-text h3 {
-  color: #70C9E8;
+  color: #70c9e8;
   font-size: 18px;
+  font-weight: bold;
+}
+
+.home-text h4 {
+  color: #171506;
+  font-size: 17px;
   font-weight: bold;
 }
 
