--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,8 +6,8 @@
   </div>
   <div class="footer-copyright">
     <ul>
-      <li>© 2024 Stichting Kansen Academie</li>
-      <li>example@gmail.com</li>
+      <li>© 2025 Stichting Kansen Academie</li>
+      <li>kansenacademie@gmail.com</li>
       <li>t 06-86159350</li>
     </ul>
   </div>
