--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,12 +20,8 @@
       <p>
         <ul>
           <li>        
-            Basis: €3,99 per maand
-            Toegang tot alle basismodules en voortgangsrapportages.
-          </li>
-          <li>        
-            Plus: €7,99 per maand
-            Alles van Basis, plus persoonlijke feedback en tips van mentoren.
+            Basis: €5,99 per maand
+            Toegang tot alle basismodules voor de perfecte ontwikkeling van het kind.
           </li>
           <li>
             Docenten account: €12,99 per maand
