--- a/app/views/dashboards/subscriptions.html.erb
+++ b/app/views/dashboards/subscriptions.html.erb
@@ -5,30 +5,28 @@
   <div class="main-content flex-grow-1">
     <h1>Lidmaatschap</h1>
 
-    <% if @current_subscription.present? %>
-      <p>Je hebt momenteel het lidmaatschap: <%= @current_subscription.membership.name %></p>
-        <%= button_to "Cancel Subscription", cancel_subscription_path(current_user.active_subscription), 
-          method: :delete, 
-          data: { confirm: "Are you sure you want to cancel your subscription?" }, 
-          class: "btn btn-danger" %>
-    <% else %>
-      <p>je hebt nog geen lidmaatschap. Kies hieronder een lidmaatschap: </p>
-      <% @memberships.each do |membership| %>
-        <p><%= membership.name %></p> 
-        <%= form_with url: subscriptions_path, method: :post, data: { turbo: false } do %>
-          <%= hidden_field_tag :membership_id, membership.id %>
-          <%= submit_tag "Kies lidmaatschap" %>
-        <% end %>
+
+
+
+    <div id="subscription-status">
+      <% if session.delete(:payment_processing) %>
+        <div class="d-flex">
+          <div>Het lidmaatschap wordt aangemaakt. Dit duurt enkele seconden. </div>
+          <div class="spinner-waiter spinner-border spinner-border-sm" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      <% else %>
+        <%= render 'subscriptions/details', current_subscription: current_user.active_subscription, memberships: Membership.all %>
       <% end %>
-    <% end %>
+    </div>
 
-    <hr>
+    <%= turbo_stream_from current_user %>
 
-    <h2>Betalingen</h2>
 
     <!-- In je dashboard.html.erb -->
     <div class="payment-history-section">
-      <h2>Betaalgeschiedenis</h2>
+      <h2 class="my-4">Betaalgeschiedenis</h2>
       
       <% if @payments.present? %>
         <table class="payments-table">
@@ -44,9 +42,9 @@
             <% @payments.each do |payment| %>
               <tr>
                 <td><%= payment.created_at.strftime('%d-%m-%Y %H:%M') %></td>
-                <td>€<%= sprintf('%.2f', payment.amount.value) %></td>
+                <td><%= humanized_money_with_symbol(payment.amount) %></td>
                 <td><%= translated_payment_status(payment) %></td>
-                <td><%= payment.subscription_type %></td>
+                <td><%= payment.description %></td>
               </tr>
             <% end %>
           </tbody>
@@ -55,6 +53,37 @@
         <p>Je hebt nog geen betalingen gedaan.</p>
       <% end %>
     </div>
+
+    <% if current_user.active_subscription.present? %>  
+      <h2 class="my-4">Opzeggen</h2>
+
+
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Lidmaatschap opzeggen
+      </button>
+
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p class="text-muted">Je hebt een actief lidmaatschap. Weet je zeker dat je je lidmaatschap wilt opzeggen?</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn" data-bs-dismiss="modal">Annuleren</button>
+              <%= button_to "Opzeggen", cancel_subscription_path(current_user.active_subscription), 
+                method: :delete, 
+                class: "btn btn-primary" %>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <% end %>
   </div>
 
 </div>
