--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -41,7 +41,7 @@
               <li class="list-group-item">
                 <span><%= student.full_name %></span>
                 <!-- Pre-check the checkbox if the student is already in the group -->
-                <%= check_box_tag "group[student_ids][]", student.id, @group.students.include?(student), class: "student-checkbox", data: { add_members_target: "studentCheckbox" } %>
+                <%= check_box_tag "group[student_ids][]", student.id, @group.students.include?(student), class: "member-checkbox", data: { add_members_target: "studentCheckbox" } %>
               </li>
             <% end %>
           </ul>
