--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -6,92 +6,12 @@
   <div class="main-content flex-grow-1">
     <h1>Cursus aanpassen</h1>
 
-    <%= form_for @course, method: :patch, data: { turbo: "false" } do |f| %>
-      <div class="form-group">
-        <%= f.label :title, "Course Title" %>
-        <%= f.text_field :title, class: 'form-control mt-2 mb-3', style: 'max-width: 600px;' %>
-      </div>
+    <%= simple_form_for @course, html: { multipart: true, data: { turbo: true } } do |f| %>
+      <%= render 'form', f: f, course: @course, groups: @groups, levels: @levels %>
 
-      <div class="form-group">
-        <%= f.label :description, "Course Description" %>
-        <%= f.text_area :description, maxlength: 250, rows: 2, class: 'form-control', style: 'max-width: 600px;' %>
-      </div>
-
-      <div class="form-group">
-        <label for="groupSelect" class="mt-3">Assign course to these groups</label>
-        <%= f.select(:group_ids, options_from_collection_for_select(@groups, "id", "name", @course.group_ids), {}, 
-                                    { multiple: true, class: "form-control mt-2", data: { controller: "tom-select" } }) %>
-      </div>
-
-      <div id="questions-container" data-course-form-target="questionsContainer">
-        <!-- Existing questions will be displayed here -->
-        <%= f.fields_for :questions do |question_form| %>
-          <div class="question-fields mb-4" data-question-id="<%= question_form.object.id %>">
-            <h4 class="new-question">
-              Vraag <%= question_form.index + 1 %>
-              <button type="button" class="btn remove-question-button text-danger" data-action="click->course-form#removeQuestion">
-                <i class="fa-solid fa-trash-can"></i>
-              </button>
-            </h4>
-
-            <div class="form-group">
-              <%= question_form.text_field :content, class: 'form-control', style: 'max-width: 600px;' %>
-            </div>
-
-            <%= question_form.hidden_field :question_type %>
-
-            <!-- Add a hidden field for marking for deletion if this is an existing question -->
-            <%= question_form.hidden_field :_destroy, value: false, data: { target: "destroyField" } %>
-
-            <div class="answers mt-2">
-              <% if question_form.object.question_type == 'open_answer' %>
-                <!-- Show only one input field for open_answer questions -->
-                <%= question_form.fields_for :answers do |answer_form| %>
-                  <% if answer_form.object.correct? %>
-                    <div class="form-group">
-                      <%= answer_form.text_field :content, class: 'form-control', style: 'max-width: 600px;' %>
-                      <!-- We ensure there's no checkbox for correct in open_answer -->
-                    </div>
-                  <% end %>
-                <% end %>
-              <% else %>
-                <!-- Display fields for other question types like multiple_choice, true_false, multiple_answer -->
-                <%= question_form.fields_for :answers do |answer_form| %>
-                  <div class="answer-fields d-flex align-items-center mb-2">
-                    <div class="form-group d-flex align-items-center" style="width: 100%;">
-                      <%= answer_form.text_field :content, class: 'form-control', style: 'max-width: 495px; margin-right: 10px;' %>
-                      <div class="form-check">
-                        <%= answer_form.check_box :correct, class: 'form-check-input multiple-choice-checkbox' %>
-                        <%= answer_form.label :correct, "Correct", class: 'form-check-label' %>
-                      </div>
-                    </div>
-                  </div>
-                <% end %>
-              <% end %>
-            </div>
-          </div>
-        <% end %>
-      </div>
-
-      <!-- Question Type Dropdown and Add Question Button -->
-      <div class="d-flex align-items-center mt-5 my-4">
-        <select id="question-type-dropdown" class="form-select me-3" style="max-width: 300px;" data-course-form-target="questionTypeDropdown">
-          <option value="multiple_choice">Multiple Choice</option>
-          <option value="open_answer">Open Answer</option>
-          <option value="true_false">True/False</option>
-          <option value="multiple_answer">Multiple Answer</option>
-        </select>
-
-        <button type="button" id="add-question-button" class="btn btn-success" data-action="click->course-form#addQuestion">
-          Add Question
-        </button>
-      </div>
-
-      <!-- Update button -->
       <div class="d-flex gap-3 mb-5">
-        <%= f.submit "Update", class: "btn btn-primary" %>
+        <%= f.submit "Opslaan", class: "btn btn-primary" %>
       </div>
-
     <% end %>
   </div>
 </div>
