--- a/app/views/courses/my_courses.html.erb
+++ b/app/views/courses/my_courses.html.erb
@@ -23,6 +23,9 @@
           <div class="d-flex justify-content-between align-items-center mb-3">
             <!-- Course Title -->
             <h2 class="mb-0"><%= course.title %></h2>
+            <% if current_user.admin? %>
+              <p>docent: <%= course.teacher.full_name %></p>
+            <% end %>
 
             <!-- Action Buttons (Edit/Delete) -->
             <div class="d-flex align-items-center">
