--- a/app/views/courses/weekly_task.html.erb
+++ b/app/views/courses/weekly_task.html.erb
@@ -26,17 +26,25 @@
         </div>
 
         <!-- Question Type Dropdown and Add Question Button -->
-        <div class="d-flex align-items-center my-4">
+        <div class="d-flex align-items-center mt-5 my-4">
           <select id="question-type-dropdown" class="form-select me-3" style="max-width: 300px;" data-course-form-target="questionTypeDropdown">
             <option value="multiple_choice">Meerkeuze vraag</option>
             <option value="open_answer">Open vraag</option>
-            <option value="true_false">Goed/Fout</option>
+            <option value="true_false">Goed/fout</option>
             <option value="multiple_answer">Meerkeuze antwoord</option>
           </select>
 
           <button type="button" id="add-question-button" class="btn btn-success" data-action="click->course-form#addQuestion">
             Vraag toevoegen
           </button>
+
+          <% ['open_answer', 'multiple_choice', 'multiple_answer', 'true_false'].each do |type| %>
+            <template data-course-form-target="template" data-question-type="<%= type %>">
+              <% form_builder = builder_for(:questions, f) %>
+              <%= render "question_fields", f: form_builder, question_type: type %>
+            </template>
+          <% end %>
+
         </div>
 
         <!-- Submit Button -->
