--- a/app/views/shared/_registration_list.html.erb
+++ b/app/views/shared/_registration_list.html.erb
@@ -7,9 +7,7 @@
 
     <!-- Completion Status -->
     <div class="col-2 text-center">
-      <% total_questions = questions.size %>
-      <% total_attempts = registration.user.attempts.where(question_id: questions.pluck(:id)).size %>
-      <% if total_attempts == total_questions && total_questions > 0 %>
+      <% if registration.user.has_completed?(registration.course) %>
         <span style="color: #6CC680;">Compleet</span>
       <% else %>
         Incompleet
@@ -18,9 +16,8 @@
 
     <!-- Score -->
     <div class="col-2 text-center">
-      <% correct_answers = registration.user.attempts.where(question_id: questions.pluck(:id), correct: true).size %>
-      <% percentage = total_questions > 0 ? (correct_answers.to_f / total_questions * 100).round : 0 %>
-      <%= percentage %>%
+      <% score = registration.user.score_for(registration.course) %>
+      <%= score[:correct] %> / <%= score[:total] %> (<%= score[:percentage] %>%)
     </div>
 
     <!-- Time Spent -->
