--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -30,6 +30,9 @@
       <li class="nav-item">
         <a class="nav-link <%= 'active' if controller_name == 'students' && action_name == 'index' %>" href="<%= students_path %>">Studenten lijst</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'levels' %>" href="<%= levels_path %>">Niveaus</a>
+      </li>
     <% end %>
 
     <li class="nav-item">
