--- a/app/views/subscriptions/_details.html.erb
+++ b/app/views/subscriptions/_details.html.erb
@@ -3,7 +3,7 @@
 <% elsif current_user.admin? %>
   <p>Dit is een admin account. Geen lidmaatschap nodig.</p>
 <% else %>
-  <p>je hebt nog geen lidmaatschap. Kies hieronder een lidmaatschap: </p>
+  <p>Je hebt nog geen lidmaatschap. Kies hieronder een lidmaatschap: </p>
 
   <div class="d-flex">
     <% memberships.each do |membership| %>
