--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,51 +1,45 @@
 <div class="dashboard-container d-flex">
-
   <!-- Sidebar -->
   <%= render 'shared/sidebar' %>
-
   <!-- Main Content -->
   <div class="main-content flex-grow-1">
-    <h1 class="mb-4">Mijn cursussen</h1>
-
+    <h1 class="mb-4">Mijn Cursussen</h1>
+    <h2>Lopende cursussen</h2>
     <% if @registered_courses_with_attempts.any? %>
       <% @registered_courses_with_attempts.each do |course_with_attempt| %>
         <% course = course_with_attempt[:course] %> <!-- Extract the course from the data structure -->
-
-        <div class="card-white mb-4 p-4">
-          <h2><%= course.title %></h2>
-          <p><%= course.description %></p>
-
-          <div class="course-content d-flex align-items-start justify-content-between">
-
-            <!-- Questions progress -->
-            <div class="questions-progress">
-              <% course.questions.each_with_index do |question, index| %>
-                <% attempt = @attempts.find { |a| a.question_id == question.id } %>
-                
-                <!-- Show whether the question has been answered -->
-                <% if attempt %>
-                  <a href="<%= course_question_path(course, question) %>" class="question-number question-answered">
-                    <%= index + 1 %>
-                  </a>
-                <% else %>
-                  <a href="<%= course_question_path(course, question) %>" class="question-number">
-                    <%= index + 1 %>
-                  </a>
+        <div class="card-white mb-4 p-4 d-flex">
+          <div>
+            <h2><%= course.title %></h2>
+            <p><%= course.description %></p>
+            <div class="course-content d-flex align-items-start justify-content-between">
+              <!-- Questions progress -->
+              <div class="questions-progress">
+                <% course.questions.each_with_index do |question, index| %>
+                  <%= question_number_link(course, question, index, @attempts) %>
                 <% end %>
-              <% end %>
+              </div>
             </div>
-
-            <!--
-            <div class="action-buttons">
-              <%= button_to 'Uitschrijven', unenroll_course_path(course), method: :delete, data: { turbo_confirm: 'Weet je het zeker?' }, class: 'btn btn-danger' %>
-            </div>
-            -->
-
+          </div>
+          <div class="ms-auto">
+            <%= button_to 'Uitschrijven', unenroll_course_path(course), method: :delete, data: { turbo_confirm: 'Weet je het zeker?' }, class: 'btn btn-danger' %>
           </div>
         </div>
       <% end %>
     <% else %>
-      <p>Je bent nog niet lid van een cursus.</p>
+      <p>Je bent nog geen lid van een cursus.</p>
+    <% end %>
+    <h2>Beschikbare cursussen</h2>
+    <% @other_courses.each do |course| %>
+      <div class="card-white mb-4 p-4">
+        <h2><%= course.title %></h2>
+        <p><%= course.description %></p>
+        <div class="course-content d-flex align-items-start justify-content-between">
+          <div class="action-buttons">
+            <%= button_to 'Inschrijven', registrations_path({ registration: { course_id: course.id }}), method: :post, class: 'btn btn-primary' %>
+          </div>
+        </div>
+      </div>
     <% end %>
   </div>
 </div>
