--- a/app/views/courses/my_courses.html.erb
+++ b/app/views/courses/my_courses.html.erb
@@ -22,7 +22,7 @@
           <!-- Flex container for Course Name and Action Buttons -->
           <div class="d-flex justify-content-between align-items-center mb-3">
             <!-- Course Title -->
-            <h2 class="mb-0"><%= course.title %></h2>
+            <h2 class="mb-0"><%= course.title %> (<%= course.levels.map(&:name).join(', ') %>)</h2>
             <% if current_user.admin? %>
               <p>docent: <%= course.teacher.full_name %></p>
             <% end %>
