--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -34,14 +34,14 @@
 }
 
 .home-container {
-  display: flex;
-  align-items: flex-start;
+  // display: flex;
+  // align-items: flex-start;
   padding: 38px 0;
 }
 
 .left-logo {
   max-width: 180px;
-  margin-right: 42px;
+  margin: 10px;
 }
 
 .home-text {
@@ -62,7 +62,13 @@
 
 .home-text p {
   color: #171506;
-  font-size: 16px;
+  font-size: 18px;
+  opacity: 0.8;
+}
+
+.home-text li {
+  color: #171506;
+  font-size: 18px;
   opacity: 0.8;
 }
 
@@ -83,13 +89,28 @@
     max-width: 220px;
   }
   .home-text h3 {
-    font-size: 20px;
+    font-size: 22px;
   }
   .home-text p {
     font-size: 20px;
+  }
+  .home-text li {
+    color: #171506;
+    font-size: 20px;
+    opacity: 0.8;
   }
   .btn-azure {
     font-size: 30px;
     padding: 7px 48px;
   }
+}
+
+img.home-level-image {
+  width: 100px;
+  margin: 10px;
+}
+
+img.home-example-image {
+  width: 500px;
+  margin: 10px 30px;
 }
