--- a/app/views/levels/index.html.erb
+++ b/app/views/levels/index.html.erb
@@ -6,7 +6,7 @@
   <div class="main-content flex-grow-1">
     <h1 class="mb-4">Niveaus</h1>
 
-    <%= link_to "niveau aanmaken", new_level_path, class: "btn btn-primary mb-4" %>
+    <%= link_to "Niveau aanmaken", new_level_path, class: "btn btn-primary mb-4" %>
 
     <% if @levels.any? %>
       <% @levels.each do |level| %>
