--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="form-group">
-  <label for="groupSelect" class="mt-3">Cursus toevoegen aan groepen</label>
+  <label for="groupSelect" class="mt-3">Cursus toevoegen aan leerlingenlijsten</label>
   <%= f.select(:group_ids, options_from_collection_for_select(groups, "id", "name", course.group_ids), {}, 
                               { multiple: true, class: "form-control mt-2", data: { controller: "tom-select" } }) %>
 </div>
